<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <!-- The scrolling content -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#fff"
                    android:elevation="@dimen/frame_layout_elevation"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/detail_inner_horiz_margin"
                        android:paddingRight="@dimen/detail_inner_horiz_margin">

                        <AutoCompleteTextView
                            android:id="@+id/ingredient_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:hint="@string/insert_an_ingredient_hint"
                            android:inputType="textAutoCorrect|textCapWords|textAutoComplete"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/add_ingredient_button"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/button_margin"
                        android:layout_marginTop="@dimen/button_margin"
                        android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                        android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                        android:paddingBottom="@dimen/padding_bottom"
                        android:background="@color/colorPrimary"
                        android:onClick="addToIngredients"
                        android:text="@string/add_button_text"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/detail_body_text_size"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_user_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingLeft="@dimen/detail_inner_horiz_margin"
                        android:paddingRight="@dimen/detail_inner_horiz_margin"
                        android:scrollbarStyle="outsideOverlay" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:background="?colorPrimary"
            app:elevation="@dimen/toolbar_elevation">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:expandedTitleMarginStart="@dimen/keyline_2"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                    android:layout_marginRight="@dimen/list_toolbar_side_margin"
                    android:layout_gravity="bottom"
                    app:elevation="@dimen/toolbar_elevation"
                    app:contentInsetStart="@dimen/toolbar_inset_start"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:navigationIcon="@drawable/ic_arrow_left_white_24dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients_activity_title"
                        app:layout_collapseMode="parallax"
                        style="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>