<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_cardview"
    android:layout_marginRight="@dimen/margin_cardview"
    android:layout_marginTop="@dimen/margin_cardview"
    android:layout_marginBottom="@dimen/margin_cardview"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:id="@+id/ingredient_item_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/iv_ingredient_image"
            android:layout_width="@dimen/ingredient_image_size"
            android:layout_height="@dimen/ingredient_image_size"
            android:scaleType="fitXY"
            android:contentDescription="@string/ingredients_image_description"
            tools:src="@drawable/default_image"/>

        <TextView
            android:id="@+id/tv_ingredient"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/ingredient_padding"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/detail_body_text_size"
            android:maxLines="@integer/number_lines"
            android:ellipsize="end"
            tools:text="ingredient mock text" />

    </LinearLayout>
</android.support.v7.widget.CardView>