...
    <string name="maximize_mode">1</string>
    <string name="minimize_mode">2</string>
    <string name="maximize_mode_label">Maximize used ingredients</string>
    <string name="minimize_mode_label">Minimize missing ingredients</string>
    <string name="ingredients_activity_title">Ingredients</string>
    <string name="insert_an_ingredient_hint">Insert an ingredient</string>
    <string name="add_button_text">ADD</string>
    <string name="add_ingredients_button_text">Start adding your ingredients!</string>
    <string name="add_ingredients_content_description">Icon to add new ingredients</string>
    <string name="recipe_removed_from_favorites">Recipe removed from favorites</string>
    <string name="resource_added_to_favorites">Recipe added to favorites</string>
</resources>

