...
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/no_ingredients_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:visibility="invisible">
...
                android:layout_height="@dimen/image_dim"
                android:layout_gravity="center"
                android:src="@drawable/add_icon"
                android:contentDescription="@string/add_ingredients_content_description" />

            <Button
                android:id="@+id/add_button"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
...
